--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -14,6 +14,8 @@
     font-size: 40px;
     padding: 20px;
     margin: 20px 50px;
+    border: 10px solid rgb(255, 75, 4);
+    border-radius: 10px;
 
 }
 
@@ -30,4 +32,20 @@
     font-weight: 400;
     font-size: 50px;
    
+}
+
+#flexbox .container{
+
+display: flex;
+flex-direction: row;
+gap: 20px;
+justify-content: space-between;
+
+
+}
+#flexbox  .container .box-2{
+
+    width: 200px;
+    height: 200px;
+    background-color: rgb(255, 230, 8);
 }
