--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -40,7 +40,7 @@ display: flex;
 flex-direction: row;
 gap: 20px;
 justify-content: space-between;
-
+background-color: blue;
 
 }
 #flexbox  .container .box-2{
