--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -40,12 +40,36 @@ display: flex;
 flex-direction: row;
 gap: 20px;
 justify-content: space-between;
-background-color: blue;
+align-items: flex-start;
 
 }
+
+#flexbox  .container .box{
+
+    width: 200px;
+    height: 200px;
+    background-color: rgb(214, 26, 1);
+}
+
+
 #flexbox  .container .box-2{
 
     width: 200px;
     height: 200px;
     background-color: rgb(255, 230, 8);
+}
+
+
+#grid-layout .container-grid{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+
+
+}
+#grid-layout .container-grid .caixa{
+   
+    height: 200px;
+    background-color: violet;
+
 }
